--- a/theme.html
+++ b/theme.html
@@ -57,6 +57,7 @@
     </header>
 
     <div class="container content">
+      <h2>This is a headline!</h2>
 
       <div class="bio">
         <a class="user-avatar">
